@@ -1,0 +1,24 @@
+<?php
+
+/**
+ * Parser for translation memory exchange (TXM) data.
+ *
+ * @since 0.4
+ *
+ * @file LT_TMXParser.php
+ * @ingroup LiveTranslate
+ *
+ * @licence GNU GPL v3
+ * @author Jeroen De Dauw < jeroendedauw@gmail.com >
+ */
+class LTTMXParser extends LTTMParser {
+	
+	/**
+	 * (non-PHPdoc)
+	 * @see LTTMParser::parse()
+	 */
+	public function parse( $text ) {
+		
+	}
+	
+}
